--- a/src/component/navbar.css
+++ b/src/component/navbar.css
@@ -11,17 +11,16 @@
 }
 .navbar_div{
     display: flex;
+    flex-direction: column;
+}
+.nav_up{
+    display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
+    width: 100vw;
     padding:0rem 1rem;
 }
-@media screen and (max-width:800px){
-    .navbar_div{
-        padding: 1rem;
-    }
-    
-}
+
 .navbar_logo{
     background: var(--Gradient-Heading, linear-gradient(90deg, #13B0F5 -2.06%, #E70FAA 100%));
     background-clip: text;
@@ -38,33 +37,45 @@
 .navbar_items_element{
     text-decoration: none;
     padding: 15px;
+    color: black;
     
 }
 .navbar_items{
     font-size: 20px;
 
 }
+.dropdown_toggle{
+    display: none;
+}
+
+.dropdown_menu{
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+}
+.nav_down{
+    display: none;
+}
 @media screen and (max-width:800px){
-    .navbar_logo{
-        font-size: 30px;
-        font-weight: 600;
+    .navbar_items{
+        display: none;
+    
+    }
+    .dropdown_toggle{
+        display:flex
     }
     .navbar_items_element{
+        text-decoration: none;
         padding: 10px;
         
     }
-    .navbar_items{
-        font-size: 15px;
-    
+    .nav_down{
+        display: flex;
+        flex-direction: column;
+        width: 100vw;
+        align-items: center;
+        background-color: white;
     }
     
-}
-@media screen and (max-width:500px){
-    .navbar_div{
-        justify-content: center;
-        padding: 1rem;
-    }
-    .navbar_logo{
-        display: none;
-    }
+    
 }
