--- a/src/component/Blogs.css
+++ b/src/component/Blogs.css
@@ -1,6 +1,7 @@
 .blogs{
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     gap: 3rem;
