--- a/src/component/Stepscomp.css
+++ b/src/component/Stepscomp.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     margin: 5rem 0rem;
-    padding: 5rem 3rem;
+    /* padding: 5rem 3rem; */
   
 }
 .steps_content_heading{
