--- a/src/component/Modal2.css
+++ b/src/component/Modal2.css
@@ -135,6 +135,13 @@
     font-weight: 400;
     margin: 10px 0px;
 }
+.brand_con{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
 .sm_btn{
   display: flex;
   align-items: center;
