--- a/src/component/Modal.css
+++ b/src/component/Modal.css
@@ -34,6 +34,9 @@
 .modal_title{
     font-size: 18px;
 }
+.modal_title_btn{
+    cursor: pointer;
+}
 .modal_head_text{
     font-size: 25px;
     margin-top: 15px;
