--- a/src/component/Modal2.css
+++ b/src/component/Modal2.css
@@ -34,6 +34,9 @@
     align-items: center;
     justify-content: space-between;
   }
+  .modal2_head_title{
+    cursor: pointer;
+  }
   .jodi_head{
     font-size: 18px;
   }
