--- a/src/component/Stepscomp.css
+++ b/src/component/Stepscomp.css
@@ -14,8 +14,14 @@ font-style: normal;
 font-weight: 700;
 line-height: normal;
 margin-bottom: 10rem;
+text-align: center;
 
 
+}
+@media (max-width:650px) {
+    .steps_content_heading{
+    margin-bottom: 5rem;
+    }
 }
 .steps_content_step{
     display: flex;
@@ -27,25 +33,25 @@ margin-bottom: 10rem;
 .block_ement{
     display: flex;
     flex-direction: column;
-    padding: 10px 40px 10px 0px;
+    padding: 10px 20px 10px 0px;
     /* border: 1px solid rgb(97, 96, 96); */
     margin: 20px;
     border-radius: 1.5rem;
     gap: 5px;
-    width: 35rem;
+    max-width: 35rem;
     cursor: pointer;
 
 }
 .block_ement.active {
     /* background-color: #f2ebeb; */
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
-    padding: 20px 40px 20px 40px;
+    padding: 20px 20px 20px 20px;
     background-color: white;
   }
 
 .steps_element{
 font-family: Roboto;
-font-size: 29.297px;
+font-size: 25px;
 font-style: normal;
 font-weight: 500;
 line-height: normal;
@@ -69,6 +75,7 @@ line-height: normal;
     }
     .steps_element{
         font-size: 20px;
+        padding: 0px 10px;
     }
     .hided_text{
         font-size: 16px; 
@@ -82,15 +89,15 @@ line-height: normal;
 }
 @media screen and (max-width:650px){
     .steps_content_step{
-        flex-direction: column;
+        flex-direction:column-reverse;
         align-items: center;
     }
     .block_ement{
         width:20rem;
-        margin:10px;
+        margin: 5px 10px;
     }
     .steps_element{
-        font-size: 20px;
+        font-size: 16px;
     }
     .hided_text{
         font-size: 16px; 
