--- a/src/component/SliderComp.css
+++ b/src/component/SliderComp.css
@@ -34,4 +34,7 @@ margin-bottom: 5rem;
         width: 20rem;
         height: 18rem;
         }
+        .sc_heading{
+            font-size: 40px
+        }
 }
