--- a/src/component/Stepscomp.css
+++ b/src/component/Stepscomp.css
@@ -2,12 +2,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 5rem 0rem;
+    margin: 0rem 0rem 5rem 0rem;
+    width: 100vw;background-color: #1A1A1A;
+    color: white;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
     /* padding: 5rem 3rem; */
   
 }
 .steps_content_heading{
-    color: #000000;
+    color: white;
 font-family: Roboto;
 font-size: 60px;
 font-style: normal;
@@ -44,9 +48,10 @@ text-align: center;
 }
 .block_ement.active {
     /* background-color: #f2ebeb; */
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    /* border: 2px solid rgb(78, 72, 72); */
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     padding: 20px 20px 20px 20px;
-    background-color: white;
+    background-color: rgb(74, 73, 73);
   }
 
 .steps_element{
@@ -66,6 +71,9 @@ line-height: normal;
 .stepcomp_block{
     display: flex;
     flex-direction:column;
+    img{
+        border-radius: 2rem;
+    }
    
 }
 @media screen and (min-width: 650px) and (max-width: 950px) {
