--- a/src/component/Blogs.css
+++ b/src/component/Blogs.css
@@ -5,5 +5,23 @@
     align-items: center;
     justify-content: center;
     gap: 3rem;
-    margin-top: 5rem;
+    /* margin-top: 5rem; */
+}
+.blogs_head{
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 60px;
+    font-weight: 800;
+    font-family: Roboto;
+    margin-top: 2rem;
+}
+@media screen and (max-width:650px){
+    .blogs{
+        margin-top: 0rem;
+    }
+    .blogs_head{
+        font-size: 40px;
+    }
 }
