--- a/src/component/HomePage.css
+++ b/src/component/HomePage.css
@@ -1,33 +1,38 @@
 .home_page {
-    /* position: absolute; */
-    /* margin-top: 4rem; */
-    /* background-image:url('./kk/Section\ →\ image.svg'); */
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     display: flex;
-    flex-direction: column;
     align-items:center;
+    justify-content:center;
+    background: var(--Gradient-Heading, linear-gradient(90deg, #13B0F5 -2.06%, #E70FAA 100%));
+    
+    
 }
 .home_page_content{
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* margin-right: 5rem; */
-    margin-top: 8rem;
-    width: 35rem;
+    justify-content: center;
+    margin-top: 7rem;
+    max-width: 70rem;
     gap: 1rem;
 }
 
 .home_page_heading{
-    color: #212529;
-text-align: center;
-font-family: Roboto;
-font-size: 71.156px;
-font-style: normal;
-font-weight: 500;
-line-height: 72px; /* 101.186% */
+    text-align: center;
+    background-color: white;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-family: Poppins;
+    font-size: 80px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 70px;
+    text-decoration: none; /* 101.186% */
+    /* text-shadow: 5px 5px 5px rgba(9, 27, 96, 0.3); */
 }
 @media screen and (max-width:600px) {
     .home_page_content{
@@ -41,13 +46,14 @@ line-height: 72px; /* 101.186% */
     
 }
 .home_page_text{
-    color: #212529;
+     color: rgb(25, 27, 28); 
     text-align: center;
     /* font-family: BasierCircleMedium; */
     font-size: 25px;
     font-style: normal;
     font-weight: 400;
     line-height: 35px; /* 125.984% */
+    max-width: 50rem;
 }
 .home_page_btn{
     margin-top: 5rem;
