--- a/src/component/Pages/About.css
+++ b/src/component/Pages/About.css
@@ -3,50 +3,31 @@
     flex-direction: column;
     align-items: center;
     padding: 0rem 2rem;
+    gap: 2rem;
 }
-.about_heading{
-    color: #000;
-font-family: Poppins;
-font-size: 40px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-margin: 3rem 0rem;
-}
-.about_start{
+.about_head{
     display: flex;
-    margin: 3rem;
+    align-items: center;
+    justify-content: center;
+    font-size: 60px;
+    font-weight: 800;
+    font-family: Roboto;
+    margin-top: 2rem;
 }
-.about_img{
-    height: 30rem;
-    border-radius: 1rem;
-}
-.about_img_sction1_text{
-    padding: 2rem 3rem;
-    color: #000000;
-font-family: Poppins;
-font-size: 30px;
-font-style: normal;
-font-weight: 500;
-line-height: 50px; /* 142.857% */
+@media screen and (max-width:650px){
+    .about_head{
+        font-size: 40px;
+    }
 }
 .about_last{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
-.about_last_first{
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
-    padding: 2rem 3rem;
-    color: #000000;
-font-family: Poppins;
-font-size: 30px;
-font-style: normal;
-font-weight: 500;
-line-height: 50px; /* 142.857% */
 
-}
 .about_last_second{
+    text-align: center;
     color: white;
     font-size: 40px;
     font-style: normal;
@@ -76,4 +57,23 @@ line-height: 50px; /* 142.857% */
     padding: 20px 30px;
     text-align: center;
     width: 30%;
+}
+@media screen and (max-width:850px){
+    
+    .about_last_second{
+        font-size: 30px;
+    }
+    .about_dowload{
+        height: auto;
+        width: auto;
+        margin: 3rem 0rem;
+    
+    }
+    .about_btn{
+        border-radius: 20px;
+        font-size: 14px;
+        margin: 20px auto auto;
+        padding: 15px 15px;
+    }
+
 }
