--- a/src/component/SliderComp.css
+++ b/src/component/SliderComp.css
@@ -14,6 +14,16 @@ font-weight: 700;
 line-height: 71px; /* 118.333% */
 margin-bottom: 5rem;
 }
+@media screen and (max-width:650px){
+    .slidercomp{
+        margin: 2rem 0rem 7rem 0rem;
+    }
+    .sc_heading{
+    font-size: 40px;
+    padding: 0rem 0.5rem;
+    }
+
+}
 .sc_slider{
     display: flex;
     align-items: center;
