--- a/src/component/Stepscomp.css
+++ b/src/component/Stepscomp.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0rem 0rem 5rem 0rem;
+    margin: 0rem 0rem 3rem 0rem;
     width: 100vw;background-color: #1A1A1A;
     color: white;
     padding-top: 3rem;
@@ -11,19 +11,23 @@
   
 }
 .steps_content_heading{
-    color: white;
+    text-align: center;
+    color: yellow;
 font-family: Roboto;
 font-size: 60px;
 font-style: normal;
 font-weight: 700;
 line-height: normal;
-margin-bottom: 10rem;
-text-align: center;
+margin-bottom: 5rem;
 
 
 }
 @media (max-width:650px) {
+    .steps_content{
+        margin: 0rem 0rem 0.5rem 0rem;
+    }
     .steps_content_heading{
+        font-size: 40px;
     margin-bottom: 5rem;
     }
 }
