--- a/src/component/Pages/ContactPage.css
+++ b/src/component/Pages/ContactPage.css
@@ -35,7 +35,7 @@ background: #FFF;
 box-shadow: 0px 0px 60px 30px rgba(0, 0, 0, 0.03);
 padding: 1rem;
 }
-@media screen and (max-width:900px){
+@media screen and (max-width:950px){
     .contact_main_div{
         flex-direction: column;
         align-items: center;
@@ -126,6 +126,7 @@ line-height: normal;
 }
 @media screen and (max-width:900px){
     .leftp{
+        height: auto;
         width: 20rem;
         padding: 2rem 1rem;
       }
